roles/tor-browser/files/rules.v4
*nat
-A OUTPUT -p tcp -m owner --uid-owner 1634 -j REDIRECT --to-ports 9040
-A OUTPUT -p udp -m owner --uid-owner 1634 -m udp --dport 53 -j REDIRECT --to-ports 5300
COMMIT

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

#######################################################
####### Ports that sometimes need to be modified ######
#######################################################
# ssh
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
# HTTP and HTTPS
#-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
# Sendgrid
#-A INPUT -p tcp -m tcp --dport 587 -j ACCEPT
#rsync
#-A INPUT -p tcp -m tcp --sport 873 -m state --state ESTABLISHED -j ACCEPT

# Plug and play file sharing
#-A INPUT -p tcp -m tcp --dport 49200 -j ACCEPT

#Plex Media Server
#-A INPUT -p tcp -m tcp --dport 32400 -j ACCEPT

# aMule and Bittorent
# -A INPUT -p tcp -m tcp --dport 6882:6889 -j ACCEPT
# -A INPUT -p tcp --dport 4662 -j ACCEPT
# -A INPUT -p udp --dport 4665 -j ACCEPT
# -A INPUT -p udp --dport 4672 -j ACCEPT

-A OUTPUT -d 127.0.0.1/32 -p tcp -m owner --uid-owner 1634 -m tcp --dport 9040 -j ACCEPT
-A OUTPUT -d 127.0.0.1/32 -p udp -m owner --uid-owner 1634 -m udp --dport 5300 -j ACCEPT
-A OUTPUT -m owner --uid-owner 1634 -j REJECT --reject-with icmp-port-unreachable

-A INPUT -j DROP
COMMIT
