roles/tor-browser/files/rules.v6
*filter

# RH0
-A INPUT -m rt --rt-type 0 -j DROP
-A FORWARD -m rt --rt-type 0 -j DROP
-A OUTPUT -m rt --rt-type 0 -j DROP

#  Allow all loopback (lo0) traffic and drop all traffic to ::1 that doesn't use lo0
-A INPUT -i lo -j ACCEPT
-A INPUT -d ::1 -j REJECT

#  Accept all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

#  Allow all outbound traffic - you can modify this to only allow certain traffic
-A OUTPUT -j ACCEPT

#  Allow HTTP and HTTPS connections from anywhere (the normal ports for websites and SSL).
#-A INPUT -p tcp --dport 80 -j ACCEPT
#-A INPUT -p tcp --dport 443 -j ACCEPT

#  Allow SSH connections
#-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT

#rsync
#-A INPUT -p tcp -m tcp --sport 873 -m state --state ESTABLISHED -j ACCEPT

#for sendgrid
#-A INPUT -p tcp -m tcp --dport 587 -j ACCEPT

#  Drop all other inbound - default deny unless explicitly allowed policy
-A INPUT -j DROP
-A FORWARD -j DROP

COMMIT
